--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,52 +103,45 @@ li {
   width: 86%; 
   margin: 0 auto;
 }
-/*=================================
-  Header styling starts here
-=================================*/
-
-
-
-
-
-
-/*=================================
-  Header styling ends here
-=================================*/  
 
 /*=================================
   main styling starts here
 =================================*/
 
+h1.heading {
+  margin: 20px 0;
+  font-size: 32px;
+  font-weight: 700;
+  text-align: center;
+}
 
+.input-field input {
+  padding: 10px 8px;
+  width: 100%;
+}
 
+.submit-field {
+  margin: 0 12px;
+}
 
+.submit-field input {
+  padding: 10px 16px;
+  background: #e18104;
+  border: 1px solid;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 14px;
+  text-transform: uppercase;
+}
 
+form.form {
+  display: flex;
+  justify-content: space-between;
+}
 
-
-
+.input-field {
+  width: 84%;
+}
 /*=================================
   main styling ends here
 =================================*/
-
-/*=================================
-  footer styling starts here
-=================================*/ 
-
-
-
-
-
-
-
- /*=================================
-  footer styling ends here
-=================================*/ 
-
-/*media query starts*/
-/*media query for 995px starts here*/
-@media only screen and (max-width: 995px) {
-
-
-
-}  
