test css git command

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ ul.movie-detail {
 ul.movie-detail li.title {
   margin-bottom: 14px;
 }
+.hi { color : #333;}
 /*=================================
   main styling ends here
 =================================*/
